--- a/src/tarot-reading.html
+++ b/src/tarot-reading.html
@@ -184,6 +184,62 @@
             text-align: center;
         }
 
+        /* Back Button Styling */
+        .home-link {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .back-btn {
+            background-color: #ff0000;
+            color: #0a0a0a;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1em;
+            font-family: 'Courier Prime', monospace;
+            font-weight: bold;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            text-decoration: none;
+            display: inline-block;
+            text-align: center;
+            touch-action: manipulation;
+            -webkit-tap-highlight-color: transparent;
+            min-width: 44px;
+            min-height: 44px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .back-btn:hover {
+            background-color: #ff3333;
+            box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
+            transform: scale(1.05);
+        }
+
+        .back-btn:active {
+            transform: scale(0.95);
+        }
+
+        @media (max-width: 768px) {
+            .home-link {
+                top: 10px;
+                left: 10px;
+            }
+
+            .back-btn {
+                padding: 8px 16px;
+                font-size: 0.9em;
+            }
+        }
+
         /* Centered Text Utilities */
         .centered-text {
             text-align: center;
