--- a/src/tarot-reading.html
+++ b/src/tarot-reading.html
@@ -195,7 +195,7 @@
             justify-content: center;
         }
 
-        .back-btn {
+        .home-link a {
             background-color: #ff0000;
             color: #0a0a0a;
             border: none;
@@ -207,24 +207,22 @@
             cursor: pointer;
             transition: all 0.3s ease;
             text-decoration: none;
-            display: inline-block;
-            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             touch-action: manipulation;
             -webkit-tap-highlight-color: transparent;
             min-width: 44px;
             min-height: 44px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
         }
 
-        .back-btn:hover {
+        .home-link a:hover {
             background-color: #ff3333;
             box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
             transform: scale(1.05);
         }
 
-        .back-btn:active {
+        .home-link a:active {
             transform: scale(0.95);
         }
 
@@ -234,7 +232,7 @@
                 left: 10px;
             }
 
-            .back-btn {
+            .home-link a {
                 padding: 8px 16px;
                 font-size: 0.9em;
             }
