remove page-specific .home-link background overrides across /src; rely on shared page-theme.css

--- a/src/bills-superbowl-infographic.html
+++ b/src/bills-superbowl-infographic.html
@@ -21,30 +21,7 @@
             min-height: 100vh;
         }
 
-        .home-link {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 9999;
-            text-decoration: none;
-            background: rgba(0, 191, 255, 0.2);
-            backdrop-filter: blur(10px);
-            color: #00bfff;
-            padding: 12px 24px;
-            border-radius: 50px;
-            border: 1px solid rgba(0, 191, 255, 0.3);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-            font-weight: 600;
-            font-size: 0.9em;
-        }
-
-        .home-link:hover {
-            background: rgba(0, 191, 255, 0.3);
-            border-color: rgba(0, 191, 255, 0.5);
-            transform: translateX(-5px);
-            box-shadow: 0 12px 40px rgba(0, 191, 255, 0.2);
-        }
+        /* Page-specific home-link overrides removed to use shared theme */
 
         .container {
             max-width: 1400px;
