--- a/src/zach_work_schedule.html
+++ b/src/zach_work_schedule.html
@@ -21,28 +21,7 @@
             color: #7ec8e3;
         }
 
-        .home-link {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 9999;
-            text-decoration: none;
-            background: rgba(0, 255, 65, 0.9);
-            color: #0a0a0a;
-            padding: 10px 20px;
-            border-radius: 25px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            font-weight: 600;
-            transition: all 0.3s ease;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-
-        .home-link:hover {
-            background: rgba(0, 255, 65, 1);
-            transform: translateX(-5px);
-        }
+        /* Page-specific home-link overrides removed to use shared theme */
 
         .container {
             max-width: 1200px;
