--- a/src/anniversary.html
+++ b/src/anniversary.html
@@ -53,33 +53,7 @@
             100% { opacity: 0.97; }
         }
 
-        .home-link {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 9999;
-            text-decoration: none;
-            background: rgba(255, 0, 0, 0.7);
-            color: #7ec8e3;
-            padding: 10px 20px;
-            border: 2px solid #7ec8e3;
-            box-shadow: 0 0 20px rgba(255, 0, 0, 0.5), inset 0 0 10px rgba(126, 200, 227, 0.2);
-            transition: all 0.3s ease;
-            font-weight: bold;
-            letter-spacing: 2px;
-            text-transform: uppercase;
-            font-size: 0.8em;
-            min-height: 44px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .home-link:hover {
-            background: rgba(255, 0, 0, 1);
-            transform: skew(-5deg);
-            box-shadow: 0 0 30px rgba(255, 0, 0, 0.8), inset 0 0 20px rgba(126, 200, 227, 0.4);
-        }
+        /* Page-specific home-link overrides removed to use shared theme */
 
         .container {
             width: 100%;
