--- a/src/bills_qb_game.html
+++ b/src/bills_qb_game.html
@@ -336,23 +336,7 @@
             }
         }
 
-        .home-link {
-            position: fixed;
-            top: 15px;
-            left: 15px;
-            background: #ff0000;
-            color: white;
-            padding: 8px 15px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-weight: bold;
-            z-index: 1000;
-            font-size: 14px;
-        }
-
-        .home-link:hover {
-            background: #cc0000;
-        }
+        /* Page-specific home-link overrides removed to use shared theme */
 
         h1 {
             color: #7ec8e3;
