--- a/src/double_dragon_beatem_up.html
+++ b/src/double_dragon_beatem_up.html
@@ -23,19 +23,7 @@
             touch-action: pan-y;
         }
 
-        .home-link {
-            position: fixed;
-            top: 10px;
-            left: 10px;
-            background: #ff0000;
-            color: white;
-            padding: 8px 15px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-weight: bold;
-            z-index: 1000;
-            font-size: 14px;
-        }
+        /* Page-specific home-link overrides removed to use shared theme */
 
         .game-wrapper {
             max-width: 800px;
