--- a/src/droid-union.html
+++ b/src/droid-union.html
@@ -29,25 +29,7 @@
             overflow-x: hidden;
         }
 
-        .home-link {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 9999;
-            text-decoration: none;
-            background: rgba(102, 126, 234, 0.9);
-            color: white;
-            padding: 10px 20px;
-            border-radius: 25px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            transition: all 0.3s ease;
-            font-weight: bold;
-        }
-
-        .home-link:hover {
-            background: rgba(102, 126, 234, 1);
-            transform: translateX(-5px);
-        }
+        /* Page-specific home-link overrides removed to use shared theme */
 
         /* Header */
         header {
