--- a/src/noodle_inventory.html
+++ b/src/noodle_inventory.html
@@ -47,33 +47,7 @@
             100% { transform: translateY(10px); }
         }
 
-        .home-link {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 9999;
-            text-decoration: none;
-            background: rgba(102, 126, 234, 0.9);
-            color: white;
-            padding: 10px 20px;
-            border-radius: 25px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            font-family: 'Courier Prime', monospace;
-            font-size: 12px;
-            font-weight: 700;
-            transition: all 0.3s ease;
-            border: 2px solid rgba(126, 200, 227, 0.5);
-            min-height: 44px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .home-link:hover {
-            background: rgba(102, 126, 234, 1);
-            box-shadow: 0 0 20px rgba(102, 126, 234, 0.8);
-            transform: scale(1.05);
-        }
+        /* Page-specific home-link overrides removed to use shared theme */
 
         .container {
             max-width: 1200px;
