--- a/src/sampson_deodorant.html
+++ b/src/sampson_deodorant.html
@@ -19,26 +19,7 @@
             overflow-x: hidden;
         }
 
-        .home-link {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 9999;
-            text-decoration: none;
-            background: rgba(102, 126, 234, 0.9);
-            color: white;
-            padding: 10px 20px;
-            border-radius: 25px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            font-weight: bold;
-            transition: all 0.3s ease;
-        }
-
-        .home-link:hover {
-            background: rgba(102, 126, 234, 1);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
-        }
+        /* Page-specific home-link overrides removed to use shared theme */
 
         .infomercial-container {
             max-width: 1200px;
