bubba_clicker: force home-link to 40x40 via inline override to bypass cached CSS

--- a/src/bubba_clicker.html
+++ b/src/bubba_clicker.html
@@ -6,6 +6,9 @@
     <title>Bubba Clicker - The Rise and Fall</title>
     <link rel="stylesheet" href="../page-theme.css">
     <style>
+        /* Safety override for cached CSS causing full-bleed a.home-link */
+        a.home-link { width: 40px !important; height: 40px !important; }
+
         body {
             padding-top: 80px;
             overflow-x: auto;
