fix: regularize home-link navigation across 11 src files
- standardize all home-link elements to <a> tags instead of <nav>/<div> wrappers
- change non-standard text variants (back to terminal, back to collection) to "← HOME"
- fix terminal-memory.html href from "../" to "../index.html"
- ensures consistent mobile experience and menu styling

--- a/src/pleasantville-clues.html
+++ b/src/pleasantville-clues.html
@@ -292,9 +292,7 @@
     </style>
 </head>
 <body>
-    <nav class="home-link">
-        <a href="../index.html">← BACK TO TERMINAL</a>
-    </nav>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="utility-container">
         <h1>PLEASANTVILLE CLUES & ANSWERS</h1>
