--- a/src/pleasantville-crossword.html
+++ b/src/pleasantville-crossword.html
@@ -266,7 +266,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← BACK TO TERMINAL</a>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="game-container">
         <h1>PLEASANTVILLE CROSSWORD</h1>
