--- a/src/rhythm-test.html
+++ b/src/rhythm-test.html
@@ -192,9 +192,7 @@
     </style>
 </head>
 <body>
-    <nav class="home-link">
-        <a href="../index.html">← Back to Bot Sportello</a>
-    </nav>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="game-container">
         <h1 style="color: #00ffff; font-family: 'Courier Prime', monospace;">RHYTHM TEST</h1>
