--- a/src/riddle-river.html
+++ b/src/riddle-river.html
@@ -314,6 +314,8 @@
     </style>
 </head>
 <body>
+    <a href="../index.html" class="home-link">← HOME</a>
+
     <div class="progress-container">
         <div class="progress-bar"></div>
     </div>
