--- a/src/site-inventory.html
+++ b/src/site-inventory.html
@@ -331,7 +331,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← BACK TO TERMINAL</a>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="container">
         <h1>SITE INVENTORY</h1>
