--- a/src/tarot-reading.html
+++ b/src/tarot-reading.html
@@ -256,9 +256,7 @@
     </style>
 </head>
 <body>
-    <div class="home-link">
-        <a href="../index.html">← Home</a>
-    </div>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="tarot-container">
         <h1 class="tarot-title">✨ Tarot Reading ✨</h1>
