--- a/src/tuesday-letter-cen.html
+++ b/src/tuesday-letter-cen.html
@@ -216,9 +216,7 @@
     </style>
 </head>
 <body>
-    <div class="home-link">
-        <a href="../index.html">← Back to Terminal</a>
-    </div>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="letter-container">
         <div class="letter-header">
