--- a/src/memory-cheer-cen.html
+++ b/src/memory-cheer-cen.html
@@ -288,7 +288,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← BACK TO TERMINAL</a>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="game-container">
         <h1>MEMORY CHEER</h1>
