--- a/src/terminal-memory.html
+++ b/src/terminal-memory.html
@@ -323,7 +323,7 @@
     </style>
 </head>
 <body>
-    <a href="../" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="container">
         <header>
