--- a/src/tuesday-letter-cen.html
+++ b/src/tuesday-letter-cen.html
@@ -12,10 +12,19 @@
             color: #7ec8e3;
             font-family: 'Courier Prime', monospace;
             line-height: 1.8;
-            padding: 60px 5px 20px 5px;
-            overflow-x: auto;
+            padding: 60px 10px 20px 10px;
+            overflow-x: hidden;
             overflow-y: auto;
             margin: 0;
+            min-height: 100vh;
+            word-wrap: break-word;
+            word-break: break-word;
+        }
+
+        @media (min-width: 480px) {
+            body {
+                padding: 70px 15px 20px 15px;
+            }
         }
 
         @media (min-width: 768px) {
@@ -27,7 +36,13 @@
         .letter-container {
             max-width: 650px;
             margin: 0 auto;
-            padding: 20px;
+            padding: 15px;
+        }
+
+        @media (min-width: 480px) {
+            .letter-container {
+                padding: 25px;
+            }
         }
 
         @media (min-width: 768px) {
