--- a/src/cen-schedule.html
+++ b/src/cen-schedule.html
@@ -44,6 +44,25 @@
             font-style: italic;
         }
 
+        .nav-links {
+            text-align: center;
+            margin-bottom: 20px;
+            padding: 10px;
+            border-bottom: 1px solid #7ec8e3;
+        }
+
+        .nav-links a {
+            color: #7ec8e3;
+            text-decoration: none;
+            margin: 0 15px;
+            transition: all 0.3s ease;
+        }
+
+        .nav-links a:hover {
+            color: #00ffff;
+            text-shadow: 0 0 10px #00ffff;
+        }
+
         .timeline {
             position: relative;
             padding-left: 40px;
