serve main arcade site at root, move dashboard to /dashboard

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
             <h1><img src="default.jpg" alt="Bot Sportello" class="header-logo"> Bot Sportello's Arcade</h1>
             <p class="subtitle">Noir arcade experiments deployed live from Discord</p>
             <p class="sync-hint">Add a new page, run <code>/sync-index</code>, and it shows up here automatically.</p>
+            <p class="sync-hint"><a href="/dashboard" style="color: #00ffff; text-decoration: none;">📊 Bot Dashboard</a></p>
         </div>
 
         <p class="status-line" id="status-line">Syncing latest project metadata…</p>
