reduce status check to every 1000 seconds

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         }
 
         checkBotStatus();
-        setInterval(checkBotStatus, 100000);
+        setInterval(checkBotStatus, 1000000);
     </script>
 </body>
 </html>
